Mobile layout bugs fixed

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ header{
 	display: inline-block;
 }
 
+@font-face{
+	font-family: adellesans;
+	src:url(fonts/adellesans.ttf);
+}
+
+
 body{
 	margin:0px;
 	background-color: black;
@@ -206,16 +212,24 @@ footer{
 }
 
 .articles-main__contents__type1{
-	float:left;
-	margin:1px 0px;
-	background: black;
-	box-sizing: border-box;
-	width:100%;		
+	float: left;
+    margin: 1px 2px;
+    background: black;
+    box-sizing: border-box;
+    padding: 8px;
+    width: -webkit-fill-available;
+}
+
+.articles-main__contents__type1 img{
+	float: left;
+	margin-right: 2px;
 }
 
 .articles-main__contents__type1__body{	
 	color:white;
-	font-size: 19px;
+	font-size: 19.2px;
+	font-family: adellesans;
+	font-weight: bold;
 	display:inline-block;
 	width:45%;
 	padding-left: 3px;
@@ -226,20 +240,30 @@ footer{
 	color: #e5127d;
 	font-size: 12px;
 	text-decoration: none;
+	font-family: helvetica;
+    font-weight: normal;
 }
 
 .articles-main__contents__type2{	
-	width: 100%;
-	display: inline-block;
-	background: black;
-    margin-bottom: 1px;    
+	padding: 8px;
+    display: inline-block;
+    background: black;
+    margin-bottom: 1px;
+    margin-left: 2px;
+    margin-right: 2px;
+    width: -webkit-fill-available;   
+}
+
+.articles-main__contents__type2 img{
+	float: left;
+	margin-right: 4px;
 }
 
 .articles-main__contents__type2__body{
 	font-size: 14.4px;
+	font-family: adellesans;
+	font-weight: bold;
 	color:white;
-	display: inline-block;
-	width:67%;
 	vertical-align: top;
 	padding-left: 3px;
 }
@@ -249,16 +273,22 @@ footer{
 	padding: 16px 0px;
 }
 .articles__content{
-	height: 69.8px;
 	width: 100%;
 	display: inline-block;
 	padding:8px 0px;
-
 	background: white;
     margin-bottom: 1px;
 }
+
+.articles__content img{
+	height: 85px;
+	width: 127.5px;
+}
+
 .articles__contents_type1{
 	font-size: 14.4px;
+	font-family: adellesans;
+	font-weight: 600;
 	color:#0A0909;
 	display: inline-block;
 	width:60%;
@@ -330,7 +360,8 @@ footer{
 }
 
 .guidebook__container{
-	background-image: url("https://cdn.vox-cdn.com/thumbor/wXsPgU5AVPuLgx-I0hnNBtL1AvA=/133x0:667x534/1024x1024/filters:format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/56179281/acastro_170810_1911_0001.0.gif");
+	background-color: black;
+	padding-bottom: 4px;
 }
 
 .guidebook__top{
@@ -368,18 +399,18 @@ footer{
 	height: 2px;
 	position: absolute;
 	right: 39px;
-	top: 71px;
+	top: 90px;
 	left: 16px;
 	z-index: 1;
 }
 
-.guidebook__top:before {
+.guidebook__bottom:before {
 	background-color: #e5127d;
 	content: "";
 	height: 2px;
 	position: absolute;
 	right: 40px;
-	bottom: 31px;
+	top: -14px;
 	-webkit-transform: rotate(-120deg);
 	transform: rotate(-120deg);
 	-webkit-transform-origin: top right;
@@ -390,7 +421,8 @@ footer{
 
 .guidebook__bottom{
 	padding-left: 16px;
-    padding-right: 16px;
+	padding-right: 16px;
+	position: relative;
 }
 
 .guidebook__bottom__article{
@@ -408,6 +440,10 @@ footer{
     float: left;
 }
 
+.guidebook__bottom__article-image img{
+	display: block;
+}
+
 .guidebook__bottom__article-content{
 	width: 70%;
 	display: inline-block;
@@ -421,4 +457,15 @@ footer{
     font-weight: bold;
     color: #424242;
     transform: translateY(-50%);
+}
+
+.more-container{
+	height: 51px;
+    background-color: #e5127d;
+    color: #ffffff;
+    text-align: center;
+    line-height: 51px;
+    font-size: 0.75em;
+    letter-spacing: 0.09em;
+    font-family: helvetica;
 }
